# Mandelbrot-Set

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Mandelbrot-Set.cbp  Mandelbrot-Set.depend  Mandelbrot-Set.layout  README.md  fragment.glsl  main.cpp  settings.txt  stb_image.cpp  utils.h
shaders/: fragment.glsl  vertex.glsl
src/: App.cpp  App.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  utils.h
